# vscode-intero

./: .gitignore  README.md  TODO.md  extension.js  package.json  rpc-intero.js  rpc-test.js
test/: extension.test.js
test/fixtures/ghc8-playground/: ghc8-playground.cabal  stack.yaml
test/fixtures/ghc8-playground/app/: Main.hs
test/fixtures/ghc8-playground/src/: Lib.hs
